2007-09-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConsole.c:	Revised calls to Tcl_InitStubs() and
	* generic/tkMain.c:	[package require Tcl] so that Tk Says What
	* generic/tkWindow.c:	It Means using the new facilties of [package]
	* library/tk.tcl:	in Tcl 8.5 about what version(s) of Tcl it
	* unix/Makefile.in:	is willing to work with.  [Bug 1578344].
	* win/Makefile.in:
	* win/makefile.vc:

2007-09-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/README: typo corrections [Bug 1788682]

2007-09-10  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConsole.c:	Revise all Tcl_InitStubs() calls to restore
	* generic/tkMain.c:	the traditional practice that a Tk shared
	* generic/tkWindow.c:	library may [load] into a Tcl 8.5 interp at
	any patchlevel.	 This practice also matches the compile time checks
	of TCL_MAJOR_VERSION and TCL_MINOR_VERSION in tk.h.  [Bug 1723622]

2007-09-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkWindow.c (Initialize):	Moved common Tk initialization
	* generic/tkInitScript.h (removed):	script out of tkInitScript.h
	* macosx/tkMacOSXInit.c:	and multiple TkpInit() routines and
	* unix/Makefile.in:	into the common Initialize() routine in
	* unix/tkUnixInit.c:	generic code.  Also removed constraint on
	* win/tkWinInit.c:	ability to define a custom [tkInit] before
	calling Tk_Init().  Until now the custom [tkInit] had to be a proc.
	Now it can be any command.  Removal of tkInitScript.h also fixes
	[Bug 1656283].

2007-09-06  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.xcode/project.pbxproj: discontinue unmaintained support
	* macosx/Wish.xcode/default.pbxuser: for Xcode 1.5; replace by Xcode2
	project for use on Tiger (with Wish.xcodeproj to be used on Leopard).

	* macosx/Wish.xcodeproj/project.pbxproj: updates for Xcode 2.5 and 3.0.
	* macosx/Wish.xcodeproj/default.pbxuser:
	* macosx/Wish.xcode/project.pbxproj:
	* macosx/Wish.xcode/default.pbxuser:
	* macosx/Wish-Common.xcconfig:
